# algorithms-genomic-sequencing

./: 01-dna_sequences_matching.ipynb  02-precessing_indexing_and_approx_matching.ipynb  03-edit_distance_assembly_overlaps.ipynb  04-algorithms_for_assembly.ipynb  README.md  Week1.ipynb  Week2.ipynb  kmers_distribution.ipynb  pyproject.toml
boyer-moore/: README.md
boyer-moore/c/: CMakeLists.txt  boyer-moore.c  boyer-moore.h  main.c
boyer-moore/cplusplus/: CMakeLists.txt  boyer-moore.cpp  boyer-moore.h  main.cpp
boyer-moore/python3/: boyer_moore.py
src/: sequencerecords.py  utils.py
