[tool.poetry]
name = "algorithms-genomic-sequencing"
version = "0.1.0"
description = ""
authors = ["Matthew G. Hogan <matthewghogan _at_ proton .dot. me>"]
readme = "README.md"

[tool.poetry.dependencies]
biopython = "^1.80"
black = "^22.10.0"
matplotlib = "^3.6"
jupyter = "^1.0.0"
python = "3.10.8"
pytest = "^7.2.0"
scipy = "^1.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
